--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,7 +7,7 @@ updates:
     time: "06:00"
     timezone: Asia/Jakarta
   open-pull-requests-limit: 99
-  target-branch: master
+  target-branch: main
   labels:
   - dependencies
   commit-message:
