--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,4 +12,18 @@ updates:
   - dependencies
   commit-message:
     prefix: chore
-    include: scope 
+    include: scope
+- package-ecosystem: github-actions
+  directory: "/"
+  schedule:
+    interval: daily
+    time: "06:00"
+    timezone: Asia/Jakarta
+  open-pull-requests-limit: 99
+  target-branch: main
+  labels:
+  - gh-actions
+  - dependencies
+  commit-message:
+    prefix: ci
+    include: scope
