--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "author": "Zhycorp Development",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint **/**.js"
+    "lint": "eslint --ignore-path .gitignore ."
   },
   "eslintConfig": {
-    "extends": "@hazmi35/eslint-config/node"
+    "extends": "./index.js"
   },
   "dependencies": {
     "@hazmi35/eslint-config": "^3.3.0"
