--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@hazmi35/eslint-config": "^3.3.0"
   },
   "devDependencies": {
-    "@types/node": "*",
+    "@types/node": "^14.14.5",
     "@typescript-eslint/eslint-plugin": ">=4.4.0",
     "@typescript-eslint/parser": ">=4.4.0",
     "eslint": ">=7.7.0",
