--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Zhycorp Development",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint --ignore-path .gitignore ."
+    "lint": "eslint --ignore-path .gitignore . --cache --cache-location .cache/eslintcache"
   },
   "eslintConfig": {
     "extends": "./index.js"
