--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -11,9 +11,6 @@ on:
 jobs:
   lint:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [12.x]
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2.3.3
@@ -21,7 +18,7 @@ jobs:
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2.1.2
       with:
-        node-version: ${{ matrix.node-version }}
+        check-latest: true
 
     - name: Install dependencies
       run: yarn install --frozen-lockfile
