--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
-    "eslint.packageManager": "yarn",
-    "npm.packageManager": "yarn",
+    "typescript.tsdk": "node_modules/typescript/lib",
+    "eslint.packageManager": "npm",
+    "npm.packageManager": "npm",
     "files.eol": "\n"
 }
